Fixed years jumplinks style

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -129,8 +129,10 @@ strong {
         }
     }
 
+    text-align: center;
+    padding-left: 0px;
     list-style-type: none;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 /* =Titles */
